<resources>
    <string name="app_name">Bookshelf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_book_list_fragment">BookListFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm_text">Confirm</string>
    <string name="author_text">Author</string>
    <string name="name_of_the_book_text">Name of the book</string>
    <string name="test_text">Я увидел в самом деле на краю неба белое облачко, которое принял было сперва за отдаленный холмик. Ямщик изъяснил мне, что облачко предвещало буран. Я слыхал о тамошних мятелях, и знал, что целые обозы бывали ими занесены. Савельич, согласно со мнением ямщика, советовал воротиться. Но ветер показался мне не силен; я понадеялся добраться заблаговременно до следующей станции, и велел ехать скорее. Ямщик поскакал; но всё поглядывал на восток. Лошади бежали дружно. Ветер между тем час от часу становился сильнее. Облачко обратилось в белую тучу, которая тяжело подымалась, росла, и постепенно облегала небо. Пошел мелкий снег - и вдруг повалил хлопьями. Ветер завыл; сделалась мятель. В одно мгновение темное небо смешалось со снежным морем. Всё исчезло. \"Ну барин\", - закричал ямщик - \"беда: буран!\"... Я выглянул из кибитки: всё было мрак и вихорь. Ветер выл с такой свирепой выразительностию, что казался одушевленным; снег засыпал меня и Савельича; лошади шли шагом - и скоро стали. - \"Что же ты не едешь?\" - спросил я ямщика с нетерпением. - \"Да что ехать? - отвечал он, слезая с облучка; невесть и так куда заехали: дороги нет, и мгла кругом. - Я стал было его бранить. Савельич за него заступился: \"И охота было не слушаться\" - говорил он сердито - \"воротился бы на постоялый двор, накушался бы чаю, почивал бы себе до утра, буря б утихла, отправились бы далее. И куда спешим? Добро бы на свадьбу!\" - Савельич был прав. Делать было нечего. Снег так и валил. Около кибитки подымался сугроб. Лошади стояли, понуря голову и изредка вздрагивая. Ямщик ходил кругом, от нечего делать улаживая упряжь. Савельич ворчал; я глядел во все стороны, надеясь увидеть хоть признак жила или дороги, но ничего не мог различить, кроме мутного кружения мятели... Вдруг увидел я что-то черное. \"Эй, ямщик!\" - закричал я - \"смотри: что там такое чернеется?\" Ямщик стал всматриваться. - А бог знает, барин, - сказал он, садясь на свое место: - воз не воз, дерево не дерево, а кажется, что шевелится. Должно быть, или волк или человек. Я приказал ехать на незнакомый предмет, который тотчас и стал подвигаться нам навстречу. Через две минуты мы поравнялись с человеком. \"Гей, добрый человек!\" - закричал ему ямщик. - \"Скажи, не знаешь ли где дорога?\"</string>
    <string name="enter">Enter</string>
    <string name="title">Hello!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register_title">glad to meet you</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">register</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="different_login">Specify a different login</string>
</resources>