<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                tools:ignore="NestedWeights" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bookCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/card_color"
                    app:cardCornerRadius="10dp" />

                <ImageView
                    android:id="@+id/addImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="8dp"
                    android:foregroundGravity="center"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_image"
                    android:layout_margin="32dp"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/name_of_the_book_text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/editAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/author_text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.7" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.3"
            android:text="@string/confirm_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>